# poynting

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.py  pyproject.toml
examples/: poynting_vector.py  retarded_time.py
src/poynting/: __init__.py  python_api.py
src/poynting/ext/: _core.cpp
src/poynting/ext/core/: __init__.py  _core.cpp
